fix: add expo-linking and expo-constants dependencies

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,7 +20,9 @@
     "drizzle-orm": "^0.38.0",
     "expo": "~52.0.0",
     "expo-clipboard": "~7.0.1",
+    "expo-constants": "~17.0.8",
     "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
     "expo-notifications": "~0.29.0",
     "expo-router": "~4.0.0",
     "expo-sqlite": "~15.1.0",
