--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/bottom-tabs": "^7.3.0",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.1.0",
     "@react-navigation/native-stack": "^7.3.0",
     "drizzle-orm": "^0.38.0",
