--- a/package.json
+++ b/package.json
@@ -28,7 +28,5 @@
     "react-dom": "18.3.1",
     "react-test-renderer": "18.3.1"
   },
-  "dependencies": {
-    "expo-linear-gradient": "~14.0.2"
-  }
+  "dependencies": {}
 }
